<resources>
    <string name="app_name">UK-Gebaerden</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigate_up">Navigate up</string>
    <string name="browse_signs">Browse signs</string>
    <string name="train_signs_passive">Train signs (passive)</string>
    <string name="train_signs_active">Train signs (active)</string>
    <string name="about_signs">About signs</string>
    <string name="settings">Settings</string>
    <string name="sign_browser">Browser</string>
    <string name="sign_trainer_active">Trainer (active)</string>
    <string name="signIconDescription">signIcon</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search signs</string>
    <string name="search_results">Search results for:</string>
    <string name="action_toggle_starred">Toggle starred</string>
    <string name="starredButton">Starred button</string>
    <string name="videoIsPlaying">Video is playing</string>
    <string name="videoError">Video error</string>
    <string name="videoIsLoading">Video is loading</string>
    <string name="action_settings">Settings</string>
    <string name="learningProgress">Learning progress: %s</string>
    <string name="progress">Progress</string>
    <string name="app_icon">App icon</string>
    <string name="signQuestion">Which sign is this?</string>
    <string name="solveQuestion">Solve</string>
    <string name="noSignWasFound">No sign was found in the database.</string>
    <string name="questionWasEasy">Easy</string>
    <string name="questionWasFair">Fair</string>
    <string name="questionWasHard">Hard</string>
    <string name="answer">Answer</string>
    <string name="trainerMnemonic">mnemomic</string>
    <string name="tags">tags</string>
    <string name="versionName">Version: 1.2.0</string>
    <string name="howHardWasTheQuestion">This question was…</string>
    <string name="signTrainerExplanation">\'Easy\': learning progress +1, \'Hard\': -1.</string>
    <string name="action_toggle_learning_mode">Toggle mode</string>
    <string name="howDoesThisSignLookLike">How does this sign look like?</string>
    <string name="sign_trainer_passive">Trainer (passive)</string>
    <string name="signTrainerQuestionTextDetail">Sign trainer question text detail</string>
    <string name="back_to_sign_browser">Back to sign browser</string>
    <string name="sign_viewer">Viewer</string>
    <string name="ASVF_1">ASVF_1: Video not found.</string>
    <string name="ASVF_2">ASFV_2: Video metadata could not be loaded. Detail:</string>
    <string name="ASVF_3">ASVF_3: Video width is null.</string>
...
