...
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="6dip">

    <TextView
        android:id="@+id/signTrainerQuestionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signQuestion"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <VideoView
        android:id="@+id/signTrainerVideoView"
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_below="@+id/signTrainerQuestionText"
        android:layout_centerHorizontal="true" />

    <Button
...
